[gd_scene load_steps=5 format=3 uid="uid://bxiw7n0s2pgje"]

[ext_resource type="Script" path="res://Scenes/Credits Menu.gd" id="1_iy17k"]
[ext_resource type="Texture2D" uid="uid://c7vjhi35m78nu" path="res://Art/Button5.png" id="1_kncpg"]
[ext_resource type="FontFile" uid="uid://pwg2u1lrabc3" path="res://Fonts/Fairy Font.ttf" id="2_y4xg3"]
[ext_resource type="VideoStream" path="res://Videos/Credits Menu Video.ogv" id="3_ch5ej"]

[node name="Credits Menu Node" type="Node"]
script = ExtResource("1_iy17k")
creditsMenuFont = ExtResource("2_y4xg3")

[node name="Credits Menu Video" type="VideoStreamPlayer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("3_ch5ej")

[node name="Credits Menu Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 30.0
offset_right = 40.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Back Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -230.0
offset_right = 8.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
icon = ExtResource("1_kncpg")

[node name="Back Text" type="Label" parent="Back Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Programmer Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -240.0
offset_right = -170.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2

[node name="Programmer Names Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -240.0
offset_right = 40.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2

[node name="Art Design Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -140.0
offset_right = -126.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2

[node name="Art Design Name Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -140.0
offset_right = 5.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sound Composer Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_right = -210.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sound Composer Name Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Producer Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = 60.0
offset_right = -165.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="Producer Name Text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 60.0
offset_right = 30.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Back Button" to="." method="IfBackButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Back Button" to="." method="IfBackButtonIsExitedByMouse"]
[connection signal="pressed" from="Back Button" to="." method="IfBackButtonIsPressed"]
